<resources>
    <string name="app_name">CompteurAndroid</string>
    <string name="titre_compteur">Mon compteur</string>
    <string name="valeur_initiale">0</string>
    <string name="bouton_plus">+</string>
    <string name="bouton_moins">-</string>
    <string name="bouton_reinitialiser">Réinitialiser</string>
    <string name="message_reinitialise">Compteur réinitialisé</string>
    <string name="bouton_plus5">+5</string>
    <string name="bouton_moins5">-5</string>
</resources>