<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_compteur"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCompteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/valeur_initiale"
        android:textSize="72sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDecrementer"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/bouton_moins" />

        <Button
            android:id="@+id/buttonIncrementer"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/bouton_plus" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonReinitialiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bouton_reinitialiser" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMoins5"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/bouton_moins5" />

        <Button
            android:id="@+id/buttonPlus5"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/bouton_plus5" />
    </LinearLayout>

</LinearLayout>
